--- a/app/config.json
+++ b/app/config.json
@@ -1,11 +1,12 @@
 {
-  "name": "Hamish Williams",
-  "role": "Designer",
-  "disciplines": ["Developer", "Prototyper", "Animator", "Illustrator", "Modder"],
-  "url": "https://hamishw.com",
-  "twitter": "@hamishMW",
-  "figma": "@Hamish",
-  "github": "HamishMW",
-  "repo": "https://github.com/HamishMW/portfolio",
+  "name": "John Kelsey",
+  "role": "Student",
+  "disciplines": ["Developer", "Prototyper" ,"Designer"],
+  "url": "https://johnkelsey.pages.dev",
+  "twitter": "@john_k_irungu",
+  "figma": "@johnkelseyirung",
+  "github": "john-kelsey",
+  "linkedin": "john-irungu-k2009",
+  "repo": "https://github.com/john-kelsey/portfolio-website-2.0",
   "ascii": "__  __  __\n\u005C \u005C \u005C \u005C \u005C\u2215\n \u005C \u005C\u2215\u005C \u005C\n  \u005C\u2215  \u005C\u2215\n"
 }
